--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Sauna Booking</title>
-  </head>
-  <body>
-    <h1>Hello! Sauna Booking is Live 🔥</h1>
-    <p>We'll add the form soon...</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Sauna Booking</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      background: #f2f2f2;
+    }
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+    form {
+      max-width: 500px;
+      margin: auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    input, select, button {
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0 1rem;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+    button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
+</head>
+<body>
+
+  <h2>Book Your Sauna Session 🔥</h2>
+
+  <form action="https://formspree.io/f/mldnknzr" method="POST">
+    <label for="name">Full Name</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email Address</label>
+    <input type="email" id="email" name="_replyto" required>
+
+    <label for="date">Date</label>
+    <input type="date" id="date" name="date" required>
+
+    <label for="time">Time</label>
+    <select id="time" name="time" required>
+      <option value="">Select a time slot</option>
+      <option>08:00 - 09:00</option>
+      <option>09:00 - 10:00</option>
+      <option>10:00 - 11:00</option>
+      <option>17:00 - 18:00</option>
+      <option>18:00 - 19:00</option>
+    </select>
+
+    <label for="notes">Additional Notes (optional)</label>
+    <input type="text" id="notes" name="notes">
+
+    <button type="submit">Book Now</button>
+  </form>
+
+</body>
 </html>
